Added tasks activity and other changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_parent_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -16,7 +17,7 @@
         android:drawableLeft="@drawable/ic_today_24dp"
         android:drawablePadding="@dimen/text_view_drawable_padding"
         android:gravity="center_vertical"
-        android:onClick="showTasksForToday"
+        android:onClick="handleMainMenuSelection"
         android:padding="20dp"
         android:text="@string/today_btn_text"
         android:textSize="24sp"
@@ -27,11 +28,11 @@
         android:id="@+id/text_starred"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_star_24dp"
-        android:drawableLeft="@drawable/ic_star_24dp"
+        android:drawableStart="@drawable/ic_starred_24dp"
+        android:drawableLeft="@drawable/ic_starred_24dp"
         android:drawablePadding="@dimen/text_view_drawable_padding"
         android:gravity="center_vertical"
-        android:onClick="showTasksForStarred"
+        android:onClick="handleMainMenuSelection"
         android:padding="20dp"
         android:text="@string/starred_btn_text"
         android:textSize="24sp"
@@ -42,11 +43,11 @@
         android:id="@+id/text_all_tasks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_list_add_check_24dp"
-        android:drawableLeft="@drawable/ic_list_add_check_24dp"
+        android:drawableStart="@drawable/ic_all_tasks_24dp"
+        android:drawableLeft="@drawable/ic_all_tasks_24dp"
         android:drawablePadding="@dimen/text_view_drawable_padding"
         android:gravity="center_vertical"
-        android:onClick="showAllTasks"
+        android:onClick="handleMainMenuSelection"
         android:padding="20dp"
         android:text="@string/all_tasks_btn_text"
         android:textSize="24sp"
