Added EditTaskActivity and other changes/improvements

--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -37,22 +37,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-<!--    <RelativeLayout-->
+<!--    <Button-->
+<!--        android:id="@+id/button"-->
 <!--        android:layout_width="wrap_content"-->
 <!--        android:layout_height="wrap_content"-->
+<!--        android:text="Button"-->
+<!--        android:onClick="showTasks"-->
 <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent" >-->
-<!--        <TextView-->
-<!--            android:text="hey"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
-<!--    </RelativeLayout>-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
-    <!--    <fragment-->
-<!--        android:id="@+id/add_task_fragment"-->
-<!--        android:name="io.github.fabiantauriello.check.AddTaskFragment"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
