--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,13 +13,13 @@
         android:id="@+id/text_today"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_today_24dp"
-        android:drawableLeft="@drawable/ic_today_24dp"
+        android:drawableStart="@drawable/ic_my_day"
+        android:drawableLeft="@drawable/ic_my_day"
         android:drawablePadding="@dimen/text_view_drawable_padding"
         android:gravity="center_vertical"
         android:onClick="handleMainMenuSelection"
         android:padding="20dp"
-        android:text="@string/today_btn_text"
+        android:text="@string/my_day_btn_text"
         android:textSize="24sp"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp" />
@@ -28,8 +28,8 @@
         android:id="@+id/text_starred"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_starred_24dp"
-        android:drawableLeft="@drawable/ic_starred_24dp"
+        android:drawableStart="@drawable/ic_star_24dp"
+        android:drawableLeft="@drawable/ic_star_24dp"
         android:drawablePadding="@dimen/text_view_drawable_padding"
         android:gravity="center_vertical"
         android:onClick="handleMainMenuSelection"
